# train-with-gpt

./: .env.example  .gitignore  ISSUES.md  README.md  exchange_token.py  opencode.json  pyproject.toml  setup_auth.py  setup_garmin.py  test_tools.py
.github/workflows/: test.yml
src/train_with_gpt/: __init__.py  auth_flow.py  config.py  garmin_client.py  helpers.py  server.py  strava_client.py
src/train_with_gpt/tools/: __init__.py  analyze_activity.py  analyze_lap.py  archive_unconsulted_notes.py  connect_strava.py  discuss_goals.py  get_activities.py  get_current_date.py  get_hrv_data.py  get_last_week_activities.py  get_resting_heart_rate.py  get_sleep_data.py  read_consultation_notes.py  read_goals.py  read_unconsulted_notes.py  save_consultation_notes.py  save_goals.py  setup_training_repo.py  start_consultation.py
tests/: __init__.py  conftest.py  test_analyze_activity.py  test_analyze_lap.py  test_config.py  test_consultation.py  test_consultation_notes.py  test_get_activities.py  test_get_hrv_data.py  test_get_resting_heart_rate.py  test_get_sleep_data.py  test_goals.py  test_server.py  test_setup_training_repo.py  test_strava_client.py
