[project]
name = "train-with-gpt"
version = "0.1.0"
description = "MCP server for training analysis and coaching suggestions (currently supports Strava)"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
train-with-gpt = "train_with_gpt.server:main"
